syntax = "proto3";

package fs.base.validate;
import "zskparker.com/foundation/base/pb/base.proto";
import "zskparker.com/foundation/base/pb/strategy1.proto";

service Validate {

    //验证
    rpc Verification (VerificationRequest) returns (fs.base.Response);

    //创建验证码(自动发送验证码)
    rpc Create (CreateRequest) returns (CreateResponse);

}

message CreateResponse {
    fs.base.State state = 1;
    string verId = 2;
}

message CreateRequest {
    string userId = 1;
    string func = 2; //功能块
    int64 mode = 3; //验证模式(1:phone,2:email,3:face)
    string to = 4;

    fs.base.OnVerification onVerification = 5; //项目配置
    fs.base.Metadata metadata = 6;
}

message VerificationRequest {

    string verId = 1;
    string code = 2;
    string func = 3;

    fs.base.OnVerification onVerification = 4; //项目配置
    fs.base.Metadata metadata = 5;
}

message VerificationResponse {
    fs.base.State state = 1;
    string to = 2;
}